force-app/main/default/objects/MandatSEPA__c/MandatSEPA__c.object-meta.xml
<CustomObject>
    <label>Mandat SEPA</label>
    <nameField>
        <label>Nom de Mandat</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mandats SEPA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>