force-app/main/default/objects/MandatSEPA__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Entreprise</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mandats SEPA</relationshipLabel>
    <relationshipName>MandatsSEPA</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>