force-app/main/default/objects/MandatSEPA__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Commentaires</label>
    <type>TextArea</type>
</CustomField>