force-app/main/default/objects/MandatSEPA__c/fields/DebtorAdress__c.field-meta.xml
<CustomField>
    <fullName>DebtorAdress__c</fullName>
    <label>Adresse du débiteur</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>