force-app/main/default/objects/MandatSEPA__c/fields/DebtorName__c.field-meta.xml
<CustomField>
    <fullName>DebtorName__c</fullName>
    <label>Nom du débiteur</label>
    <length>80</length>
    <type>Text</type>
</CustomField>