force-app/main/default/objects/MandatSEPA__c/fields/ICS__c.field-meta.xml
<CustomField>
    <fullName>ICS__c</fullName>
    <label>ICS</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>