force-app/main/default/objects/MandatSEPA__c/fields/MandatStatus__c.field-meta.xml
<CustomField>
    <fullName>MandatStatus__c</fullName>
    <label>Statut du mandat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>à traiter</fullName>
            </value>
            <value>
                <fullName>envoyé à Treezor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>