force-app/main/default/objects/MandatSEPA__c/fields/RUM__c.field-meta.xml
<CustomField>
    <fullName>RUM__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Référence unique de mandat</description>
    <label>RUM</label>
    <length>35</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>