force-app/main/default/objects/MandatSEPA__c/listViews/Mandats_traiter.listView-meta.xml
<ListView>
    <fullName>Mandats_traiter</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>DebtorName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MandatStatus__c</field>
        <operation>equals</operation>
        <value>à traiter</value>
    </filters>
    <label>Mandats à traiter</label>
</ListView>